--- a/app/views/v2/user-add-2.html
+++ b/app/views/v2/user-add-2.html
@@ -18,7 +18,7 @@
 
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-            <form action="user-summary" method="post" class="form">
+            <form action="user-add-3" method="post" class="form">
                 {{ govukFieldset({
                     legend: {
                         html: '<span class="govuk-caption-l">Add a new user</span>Set user permissions',
