--- a/app/views/v2/user-edit.html
+++ b/app/views/v2/user-edit.html
@@ -12,7 +12,7 @@
 
 {% block content %}
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-one-half">
+  <div class="govuk-grid-column-two-thirds">
     <form action="user-summary" method="post" class="form">
       {{ govukFieldset({
         legend: {
@@ -28,7 +28,8 @@
         },
         id: "user-full-name",
         name: "user-full-name",
-        value: data["user-full-name"]
+        value: data["user-full-name"],
+        classes: "govuk-!-width-three-quarters"
       }) }}
 
       {{ govukInput({
@@ -38,7 +39,8 @@
         id: "user-email-address",
         name: "user-email-address",
         type: "email",
-        value: data["user-email-address"]
+        value: data["user-email-address"],
+        classes: "govuk-!-width-three-quarters"
       }) }}
 
       {{ govukInput({
@@ -48,7 +50,8 @@
         id: "user-phone-number",
         name: "user-phone-number",
         type: "tel",
-        value: data["user-phone-number"]
+        value: data["user-phone-number"],
+        classes: "govuk-!-width-three-quarters"
       }) }}
 
       {{ govukButton({
