--- a/app/views/v2/user-summary.html
+++ b/app/views/v2/user-summary.html
@@ -19,38 +19,55 @@
         {{ govukSummaryList({
         rows: [
             {
-            key: {
-                text: "User details"
-            },
-            value: {
-                html: data["user-full-name"] + "<br>" + data["user-email-address"] + "<br>" + data["user-phone-number"]
-            },
-            actions: {
-                items: [
-                {
-                    href: "user-edit",
-                    text: "Change",
-                    visuallyHiddenText: "details"
+                key: {
+                    text: "User details"
+                },
+                value: {
+                    html: data["user-full-name"] + "<br>" + data["user-email-address"] + "<br>" + data["user-phone-number"]
+                },
+                actions: {
+                    items: [
+                    {
+                        href: "user-edit",
+                        text: "Change",
+                        visuallyHiddenText: "details"
+                    }
+                    ]
                 }
-                ]
-            }
             },
             {
-            key: {
-                text: "This user can..."
-            },
-            value: {
-                html: "create organisation users: " + data["user-access-rights-add-org-users"] + "<br>" + "add existing services to a partner organisation: " + data["user-access-rights-add-org-services"]+ "<br>"  + "create new partner organisations: " + data["user-access-rights-add-organisations"]+ "<br>"  + "add existing services to a service group: " + data["user-access-rights-add-services-to-operator"]+ "<br>"  + "create new services: " + data["user-access-rights-add-services"]+ "<br>"  + "create new service groups: " + data["user-access-rights-add-service-groups"]
-            },
-            actions: {
-                items: [
-                {
-                    href: "user-edit-2",
-                    text: "Change",
-                    visuallyHiddenText: "access rights"
+                key: {
+                    text: "In services and service groups, this user can..."
+                },
+                value: {
+                    html: "add existing services to a service group: " + data["user-access-rights-add-services-to-operator"]+ "<br>"  + "create new services: " + data["user-access-rights-add-services"]+ "<br>"  + "create new service groups: " + data["user-access-rights-add-service-groups"]
+                },
+                actions: {
+                    items: [
+                    {
+                        href: "user-edit-2",
+                        text: "Change",
+                        visuallyHiddenText: "access rights"
+                    }
+                    ]
                 }
-                ]
-            }
+            },
+            {
+                key: {
+                    text: "In partner organisations, this user can..."
+                },
+                value: {
+                    html: "create organisation users: " + data["user-access-rights-add-org-users"] + "<br>" + "add existing services to a partner organisation: " + data["user-access-rights-add-org-services"]+ "<br>"  + "create new partner organisations: " + data["user-access-rights-add-organisations"]
+                },
+                actions: {
+                    items: [
+                    {
+                        href: "user-edit-3",
+                        text: "Change",
+                        visuallyHiddenText: "access rights"
+                    }
+                    ]
+                }
             }
         ]
         }) }}
