Amends to org & services lists. New HA dashboard.

--- a/app/views/v2/organisation-list.html
+++ b/app/views/v2/organisation-list.html
@@ -36,14 +36,14 @@
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="organisation-edit" class="govuk-link">G3S</a></th>
         <td class="govuk-table__cell"><a href="operator-edit" class="govuk-link">Health</a></td>
-        <td class="govuk-table__cell"><a href="service-edit" class="govuk-link">Health Assessments</a></td>
+        <td class="govuk-table__cell"><a href="service-edit" class="govuk-link">Health Assessment</a></td>
         <td class="govuk-table__cell govuk-table__cell--numeric"><a href="user-list" class="govuk-link">37</a></td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="organisation-edit" class="govuk-link">Providers R Us</a></th>
         <td class="govuk-table__cell"><a href="operator-edit" class="govuk-link">Health</a></td>
-        <td class="govuk-table__cell"><a href="service-edit" class="govuk-link">Health Assessments</a></td>
+        <td class="govuk-table__cell"><a href="service-edit" class="govuk-link">Health Assessment</a></td>
         <td class="govuk-table__cell govuk-table__cell--numeric"><a href="user-list" class="govuk-link">31</a></td>
       </tr>
 
