--- a/app/views/v2/service-list.html
+++ b/app/views/v2/service-list.html
@@ -34,6 +34,13 @@
       {% endif %}
 
       <tr class="govuk-table__row">
+        <th scope="row" class="govuk-table__header"><a href="dashboard-service-health-assessment" class="govuk-link">Health Assessment</a></th>
+        <td class="govuk-table__cell"><a href="operator-edit" class="govuk-link">Health</a></td>
+        <td class="govuk-table__cell govuk-table__cell--numeric"><a href="organisation-list" class="govuk-link">17</a></td>
+        <td class="govuk-table__cell govuk-table__cell--numeric"><a href="user-list" class="govuk-link">167</a></td>
+      </tr>
+
+      <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="service-edit" class="govuk-link">TRAPS</a></th>
         <td class="govuk-table__cell"><a href="operator-edit" class="govuk-link">Health</a></td>
         <td class="govuk-table__cell govuk-table__cell--numeric"><a href="organisation-list" class="govuk-link">23</a></td>
