Add first user research discussion doc download

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -187,15 +187,7 @@
 
                 <ul class="govuk-list">
                     <li>
-                        <a class="govuk-link" href="#">Discussion guide</a>
-                    </li>
-
-                    <li>
-                        <a class="govuk-link" href="#">Research plan</a>
-                    </li>
-
-                    <li>
-                        <a class="govuk-link" href="#">User videos</a>
+                        <a class="govuk-link" href="/public/files/discussion/admin-portal-discussion-guide-add-a-service-group-1.docx">Discussion guide</a>
                     </li>
                 </ul>
             {% endset %}
