--- a/app/views/v2/dashboard-service-traps.html
+++ b/app/views/v2/dashboard-service-traps.html
@@ -11,15 +11,15 @@
 {% endblock %}
 
 {% block content %}
-<h1 class="govuk-heading-l">Health Assessment</h1>
+<h1 class="govuk-heading-l">TRAPS</h1>
 
 <div class="govuk-cards govuk-cards--2">
-  <div class="govuk-cards--2__item govuk-card--dashboard">
+    <div class="govuk-cards--2__item govuk-card--dashboard">
     <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Partner organisations</h2>
 
     <p class="govuk-heading-xl govuk-!-margin-bottom-5">
       <span class="govuk-visually-hidden">There are currently</span>
-      17
+      23
       <span class="govuk-visually-hidden">partner organisations in the system</span>
     </p>
 
@@ -39,7 +39,7 @@
 
     <p class="govuk-heading-xl govuk-!-margin-bottom-5">
       <span class="govuk-visually-hidden">There are currently</span>
-      167
+      184
       <span class="govuk-visually-hidden">users in the system</span>
     </p>
 
