--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -247,8 +247,8 @@ a.pagination__link:focus {
 
 .govuk-cards--2__item {
   box-sizing: border-box;
-  border: 1px solid rgb(200, 200, 200);
-  background-color: rgb(248, 248, 248);
+  border: 1px solid #b1b4b6;
+  background-color: #f3f2f1;
   padding: 20px;
   margin-bottom: 20px;
 
