--- a/app/views/index.html
+++ b/app/views/index.html
@@ -106,6 +106,9 @@
                     <li>
                         Added some new dashboards for service groups/services
                     </li>
+                    <li>
+                        A different approach to choosing user permissions
+                    </li>
                 </ul>
 
                 <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
