Make pretend Capita users have pretend capita email addresses

--- a/app/views/v3/user-list-capita-2.html
+++ b/app/views/v3/user-list-capita-2.html
@@ -27,31 +27,31 @@
     <tbody class="govuk-table__body">
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Jane Smith</a></th>
-        <td class="govuk-table__cell"><a href="mailto:jane.smith@company.gov.uk" class="govuk-link">jane.smith@company.gov.uk</a></td>
+        <td class="govuk-table__cell"><a href="mailto:jane.smith@capita.pretend" class="govuk-link">jane.smith@capita.pretend</a></td>
         <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Joan Smith</a></th>
-        <td class="govuk-table__cell"><a href="mailto:joan.smith@company.gov.uk" class="govuk-link">joan.smith@company.gov.uk</a></td>
+        <td class="govuk-table__cell"><a href="mailto:joan.smith@capita.pretend" class="govuk-link">joan.smith@capita.pretend</a></td>
         <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">James Smith</a></th>
-        <td class="govuk-table__cell"><a href="mailto:james.smith@company.gov.uk" class="govuk-link">james.smith@company.gov.uk</a></td>
+        <td class="govuk-table__cell"><a href="mailto:james.smith@capita.pretend" class="govuk-link">james.smith@capita.pretend</a></td>
         <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Joe Smith</a></th>
-        <td class="govuk-table__cell"><a href="mailto:joe.smith@company.gov.uk" class="govuk-link">joe.smith@company.gov.uk</a></td>
+        <td class="govuk-table__cell"><a href="mailto:joe.smith@capita.pretend" class="govuk-link">joe.smith@capita.pretend</a></td>
         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--inactive">Inactive</span></td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Jack Smith</a></th>
-        <td class="govuk-table__cell"><a href="mailto:jack.smith@company.gov.uk" class="govuk-link">jack.smith@company.gov.uk</a></td>
+        <td class="govuk-table__cell"><a href="mailto:jack.smith@capita.pretend" class="govuk-link">jack.smith@capita.pretend</a></td>
         <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
       </tr>
     </tbody>
