--- a/app/views/v3/user-list-capita.html
+++ b/app/views/v3/user-list-capita.html
@@ -35,55 +35,55 @@
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">Gary Speed</a></th>
-        <td class="govuk-table__cell"><a href="mailto:gary.speed@company.gov.uk" class="govuk-link">gary.speed@company.gov.uk</a></td>
+        <td class="govuk-table__cell"><a href="mailto:gary.speed@capita.pretend" class="govuk-link">gary.speed@capita.pretend</a></td>
         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--inactive">Suspended</span></td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">Gordon Strachan</a></th>
-        <td class="govuk-table__cell"><a href="mailto:gordon.strachan@company.gov.uk" class="govuk-link">gordon.strachan@company.gov.uk</a></td>
+        <td class="govuk-table__cell"><a href="mailto:gordon.strachan@capita.pretend" class="govuk-link">gordon.strachan@capita.pretend</a></td>
         <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">Gary McAllister</a></th>
-        <td class="govuk-table__cell"><a href="mailto:gary.mcallister@company.gov.uk" class="govuk-link">gary.mcallister@company.gov.uk</a></td>
+        <td class="govuk-table__cell"><a href="mailto:gary.mcallister@capita.pretend" class="govuk-link">gary.mcallister@capita.pretend</a></td>
         <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">Tony Dorigo</a></th>
-        <td class="govuk-table__cell"><a href="mailto:tony.dorigo@company.gov.uk" class="govuk-link">tony.dorigo@company.gov.uk</a></td>
+        <td class="govuk-table__cell"><a href="mailto:tony.dorigo@capita.pretend" class="govuk-link">tony.dorigo@capita.pretend</a></td>
         <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">Mel Sterland</a></th>
-        <td class="govuk-table__cell"><a href="mailto:mel.sterland@company.gov.uk" class="govuk-link">mel.sterland@company.gov.uk</a></td>
+        <td class="govuk-table__cell"><a href="mailto:mel.sterland@capita.pretend" class="govuk-link">mel.sterland@capita.pretend</a></td>
         <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">John Doe</a></th>
-        <td class="govuk-table__cell"><a href="mailto:john.doe@company.gov.uk" class="govuk-link">john.doe@company.gov.uk</a></td>
+        <td class="govuk-table__cell"><a href="mailto:john.doe@capita.pretend" class="govuk-link">john.doe@capita.pretend</a></td>
         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--inactive">Suspended</span></td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">Jackson Smith</a></th>
-        <td class="govuk-table__cell"><a href="mailto:jackson.smith@company.gov.uk" class="govuk-link">jackson.smith@company.gov.uk</a></td>
+        <td class="govuk-table__cell"><a href="mailto:jackson.smith@capita.pretend" class="govuk-link">jackson.smith@capita.pretend</a></td>
         <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">Jessie Smith</a></th>
-        <td class="govuk-table__cell"><a href="mailto:jessie.smith@company.gov.uk" class="govuk-link">jessie.smith@company.gov.uk</a></td>
+        <td class="govuk-table__cell"><a href="mailto:jessie.smith@capita.pretend" class="govuk-link">jessie.smith@capita.pretend</a></td>
         <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">John Smith</a></th>
-        <td class="govuk-table__cell"><a href="mailto:john.smith@company.gov.uk" class="govuk-link">john.smith@company.gov.uk</a></td>
+        <td class="govuk-table__cell"><a href="mailto:john.smith@capita.pretend" class="govuk-link">john.smith@capita.pretend</a></td>
         <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
       </tr>
     </tbody>
