Various new views for different routes

--- a/app/views/v3/user-list-capita-2.html
+++ b/app/views/v3/user-list-capita-2.html
@@ -13,7 +13,7 @@
 {% block content %}
   <h1 class="govuk-heading-l listing-page">Users</h1>
 
-  <a href="user-add" class="govuk-button listing-page">Add new user</a>
+  <a href="user-add-capita" class="govuk-button listing-page">Add new user</a>
 
   <table class="govuk-table">
     <thead class="govuk-table__head">
