--- a/app/views/v3/dashboard-organisation-capita.html
+++ b/app/views/v3/dashboard-organisation-capita.html
@@ -25,7 +25,7 @@
 
     <ul class="govuk-list">
       <li>
-        <a href="user-add" class="govuk-link">Add a new user</a>
+        <a href="user-add-capita" class="govuk-link">Add a new user</a>
       </li>
 
       <li>
