--- a/app/views/v3/organisation-confirmation-health-assessment.html
+++ b/app/views/v3/organisation-confirmation-health-assessment.html
@@ -21,7 +21,7 @@
 
     <!--<a href="organisation-list" class="govuk-link">View all partner organisations</a><br>
     <a href="organisation-add" class="govuk-link">Add another partner organisation</a><br>-->
-    <a href="dashboard-root" class="govuk-link">Go to the dashboard</a>
+    <a href="dashboard-service-health-assessment" class="govuk-link">Go to the dashboard</a>
   </div>
 </div>
 {% endblock %}
