--- a/app/views/v3/user-list-capita.html
+++ b/app/views/v3/user-list-capita.html
@@ -13,7 +13,7 @@
 {% block content %}
   <h1 class="govuk-heading-l listing-page">Users</h1>
 
-  <a href="/v3/user-add" class="govuk-button listing-page">Add new user</a>
+  <a href="/v3/user-add-capita" class="govuk-button listing-page">Add new user</a>
 
   <table class="govuk-table">
     <thead class="govuk-table__head">
