Start fleshing out all the views for a service journey

--- a/app/views/v3/dashboard-service-health-assessment.html
+++ b/app/views/v3/dashboard-service-health-assessment.html
@@ -45,7 +45,7 @@
 
     <ul class="govuk-list">
       <li>
-        <a href="user-add" class="govuk-link">Add a new user</a>
+        <a href="user-add-health-assessment" class="govuk-link">Add a new user</a>
       </li>
 
       <li>
@@ -53,7 +53,7 @@
       </li>
 
       <li>
-        <a href="user-list" class="govuk-link">View all users</a>
+        <a href="user-list-health-assessment" class="govuk-link">View all users</a>
       </ul>
   </div>
 </div>
